# AS05_FunctionalPatterns

./: FunctionalPatterns.cabal  README.md
Data/: Option.hs  Tests.hs
Lang/: Imp.hs  Tests.hs
Reader/: Example.hs  Tests.hs
Validation/: Main.hs
