cabal-version:      3.0
name:               FunctionalPatterns
version:            0.1.0.0
author:             Daniel Kröni
maintainer:         daniel.kroeni@fhnw.ch
build-type:         Simple

common warning
    ghc-options: -Wall


executable validation
  import:           warning
  main-is:             validation/Main.hs
  -- other-modules:
  -- other-extensions:
  build-depends:       base ^>=4.17.0.0
                     , scotty ==0.22
                     , aeson
                     , text
                     , http-types
  -- hs-source-dirs:
  default-language:    Haskell2010


test-suite option
    import:           warning
    default-language: Haskell2010
    type:             exitcode-stdio-1.0
    main-is:          Data/Tests.hs
    other-modules:    Data.Option
    build-depends:
        base ^>=4.17.0.0,
        hspec ==2.11.4,
        hspec-contrib,
        QuickCheck,
        HUnit

test-suite reader
    import:           warning
    default-language: Haskell2010
    type:             exitcode-stdio-1.0
    main-is:          Reader/Tests.hs
    other-modules:    Reader.Example
    build-depends:
        base ^>=4.17.0.0,
        hspec ==2.11.4,
        hspec-contrib,
        QuickCheck,
        HUnit

test-suite imp
    import:           warning
    default-language: Haskell2010 
    type:             exitcode-stdio-1.0
    main-is:          Lang/Tests.hs
    other-modules:    Lang.Imp
    build-depends:
        base ^>=4.17.0.0,
        hspec ==2.11.4,
        containers,
        hspec-contrib,
        QuickCheck,
        HUnit
